11-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-cloud-generator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word-cloud-generator
  template:
    metadata:
      labels:
        app: word-cloud-generator
    spec:
      containers:
      - name: wcg
        image: ghcr.io/aleksandrhirs/wcg:c8f9afcfe32d910d233ea1ae264c8865d54d73b8
        ports:
        - containerPort: 8888
