11-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-cloud-generator-service
spec:
  type: ClusterIP
  selector:
    app: word-cloud-generator
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
